<resources>
    <string name="app_name">iGo</string>
    <string name="no_test_result">无测试结果!</string>
    <string name="label_create_new">配置任务</string>
    <string name="text_copyright">Copyright © 2017 深圳市金立通信设备有限公司 测试平台部 版权所有</string>
    <string name="config_package_title">测试应用</string>
    <string name="basic_config_title">基础设置</string>
    <string name="max_runtime">运行时长(单位：秒)</string>
    <string name="max_run_events">运行事件数</string>
    <string name="max_app_restart_time">应用重启数</string>
    <string name="label_create_timer">选择时间</string>
    <string name="label_h">小时</string>
    <string name="label_m">分钟</string>
    <string name="label_s">秒</string>
    <string name="loading">正在加载…</string>
    <string name="label_choose_application">选择测试应用</string>
    <string name="max_runtime_hint">测试任务的总时长</string>
    <string name="max_runtime_initial">3600</string>
    <string name="max_run_events_hint">测试过程中执行的事件总数</string>
    <string name="max_run_events_initial">65535</string>
    <string name="max_restart_times_hint">测试任务中目标应用允许最大的重启次数</string>
    <string name="max_throttle_hint">测试任务中事件的间隔等待时长,单位毫秒</string>
    <string name="max_restart_times_initial">100</string>
    <string name="foreground_service_title">iGo</string>
    <string name="foreground_service_subtitle">iGo测试服务正在运行中</string>
    <string name="test_finished_title">测试完成</string>
    <string name="test_finished_desc">是否跳转到iGo应用,查看测试结果?</string>
    <string name="test_finished_cancel">稍后查看</string>
    <string name="test_finished_ok">立即查看</string>
    <string name="result_label">测试结果</string>
    <string name="no_timestamp">无测试结束时间点</string>
    <string name="timestamp_not_exist">文件不存在!</string>
    <string name="convert_title">提示</string>
    <string name="convert_message">正在加载中</string>
    <string name="result_title_summary">测试详情</string>
    <string name="result_title_result">测试结论</string>
    <string name="result_title_value">不通过</string>
    <string name="pass">通过</string>
    <string name="summary_package">测试应用包名</string>
    <string name="summary_timestamp">测试开始时间</string>
    <string name="summary_duration">测试时长</string>
    <string name="summary_cover">界面覆盖率</string>
    <string name="summary_activities">总界面计数</string>
    <string name="summary_not_pass_reason">未通过原因</string>
    <string name="result_summary_activity">测试界面统计</string>
    <string name="result_title_config">配置信息</string>
    <string name="config_max_steps">最大的运行事件数</string>
    <string name="config_max_runtime">最大的运行时长</string>
    <string name="config_app_restart_times">最大重启应用次数</string>
    <string name="config_log_mode">Log模式</string>
    <string name="activities_info_label">应用界面详情</string>
    <string name="web_content">HTML测试结果</string>
    <string name="local_html_not_exist_msg">本地HTML测试结果文件不存在!</string>
    <string name="result_title_exception">异常信息</string>
    <string name="exception_title_anr">ANR统计</string>
    <string name="exception_title_crash">CRASH统计</string>
    <string name="no_exception">无</string>
    <string name="exception_label">异常信息列表</string>
    <string name="exception_dialog_title">提示</string>
    <string name="exception_dialog_msg">若需要查看具体的异常信息,请点击菜单按钮打开本地的HTML测试结果进行查看.</string>
    <string name="zero_text">00</string>
    <string name="config_throttle_title">事件间隔时间</string>
    <string name="error_no_pkg">请选择要测试的目标应用</string>
    <string name="error_no_runtime_and_events_count">运行时长必须设置.</string>
    <string name="error_no_runtime_less">运行时长必须大于一分钟.</string>
    <string name="error_max_events">运行事件数指定有误,范围为10~Integer.MAX_VALUE.</string>
    <string name="error_max_restart_times">应用重启数指定有误,范围为50~500.</string>
    <string name="no_application_restart_times">请设置应用重启数.</string>
    <string name="no_throttle_times">请设置事件间隔时间.</string>
    <string name="error_throttle_times">设置事件间隔时间有误,范围必须是100~3000.</string>
    <string name="about_me">开发者: 邓望建 &lt;Viking Den&gt;</string>
    <string name="about_email">邮箱: dengwj@gionee.com</string>
    <string name="about_version">版本信息: V1.08.03L</string>
    <string name="about">关于</string>
    <string name="read">已阅读</string>
    <string name="notice">\n1. 在测试前请确保本应用已加入系统管理清理白名单.\n2. 测试前请设置屏幕休眠时间为最长,防止测试时息屏.\n3. 请确保没有开启悬浮触点功能.\n4. 在测试前请确保此程序在测试过程中不会被异常终止，如文件管理测试中被卸载等.\n</string>
    <string name="notice_title">测试须知</string>
    <string name="not_show_again">不再提示</string>
</resources>
