<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="5dp"
    tools:background="@color/colorConfigBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:theme="@style/ConfigTitle"
        android:text="@string/max_runtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:theme="@style/ConfigTitle"
        android:text="@string/max_run_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:theme="@style/ConfigTitle"
        android:text="@string/max_app_restart_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>