<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="100dp"
        android:id="@+id/logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/launcher_icon"
        android:contentDescription="@null"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/about_me"
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AboutStyle"
        android:text="@string/about_me"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/about_email"
        android:layout_below="@id/about_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_email"
        android:theme="@style/AboutStyle"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_below="@id/about_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_version"
        android:theme="@style/AboutStyle"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:maxLines="1"
        android:textSize="10sp"
        android:paddingBottom="20dp"
        android:textColor="@android:color/white"
        android:text="@string/text_copyright"
        />

</RelativeLayout>