<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <android.support.v7.widget.GridLayout
        android:id="@+id/summary_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:alignmentMode="alignBounds"
        app:columnCount="2"
        app:columnOrderPreserved="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_title_summary"
            android:theme="@style/ResultBigTitle"
            app:layout_columnSpan="2" />
        <!--package name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_package"
            android:theme="@style/ResultTextView"
            android:layout_marginEnd="12dp"
            app:layout_gravity="right" />

        <com.gionee.autotest.traversal.widget.MarqueeTextView
            android:id="@+id/summary_package"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:theme="@style/ResultTextView"
            app:layout_gravity="left"
            tools:text="ExceptionsExample(com.gionee.autotest.traversal.exceptions)" />
        <!--test time-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_timestamp"
            android:theme="@style/ResultTextView"
            android:layout_marginEnd="12dp"
            app:layout_gravity="right" />

        <com.gionee.autotest.traversal.widget.MarqueeTextView
            android:id="@+id/summary_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:theme="@style/ResultTextView"
            app:layout_gravity="left"
            tools:text="2017-09-06 15:59:43" />
        <!--test duration-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_duration"
            android:theme="@style/ResultTextView"
            android:layout_marginEnd="12dp"
            app:layout_gravity="right" />

        <com.gionee.autotest.traversal.widget.MarqueeTextView
            android:id="@+id/summary_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:theme="@style/ResultTextView"
            app:layout_gravity="left"
            tools:text="99小时1分钟18秒" />
        <!--test cover-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_cover"
            android:theme="@style/ResultTextView"
            android:layout_marginEnd="12dp"
            app:layout_gravity="right" />

        <com.gionee.autotest.traversal.widget.MarqueeTextView
            android:id="@+id/summary_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:theme="@style/ResultTextView"
            app:layout_gravity="left"
            tools:text="100.00%" />
        <!--test activities total-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_activities"
            android:theme="@style/ResultTextView"
            android:layout_marginEnd="12dp"
            app:layout_gravity="right" />

        <com.gionee.autotest.traversal.widget.MarqueeTextView
            android:id="@+id/summary_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:theme="@style/ResultTextView"
            app:layout_gravity="left"
            tools:text="16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_not_pass_reason"
            android:theme="@style/ResultTextView"
            android:layout_marginEnd="12dp"
            app:layout_gravity="right" />

        <com.gionee.autotest.traversal.widget.MarqueeTextView
            android:id="@+id/summary_not_pass_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:theme="@style/ResultTextView"
            app:layout_gravity="left"
            tools:text="16" />
    </android.support.v7.widget.GridLayout>
</android.support.v7.widget.CardView>